Z-index to work around https://bugzilla.mozilla.org/show_bug.cgi?id=886716 refs #2834

--- a/plugins/CoreHome/stylesheets/dataTable/_rowActions.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_rowActions.less
@@ -5,6 +5,7 @@ table.dataTable .dataTableRowActions {
   display: none;
   overflow: hidden;
   margin-top: -5px;
+  z-index: 1000; /* Work around FF bug to make sure it displays over ellipsis */
 }
 
 *+html table.dataTable .dataTableRowActions {
